-- 1. Creación de Tablas Base (Sin dependencias)
CREATE TABLE users (
                       id UUID PRIMARY KEY,
                       name VARCHAR(255) NOT NULL,
                       email VARCHAR(255) NOT NULL UNIQUE,
                       password_hash VARCHAR(255) NOT NULL,
                       role VARCHAR(50) NOT NULL,
                       created_at TIMESTAMP NOT NULL
);

CREATE TABLE room_types (
                            id BIGSERIAL PRIMARY KEY,
                            name VARCHAR(255) NOT NULL UNIQUE,
                            capacity INT NOT NULL,
                            price_per_night DECIMAL(10, 2) NOT NULL
);

-- 2. Creación de Tablas con Claves Foráneas (1:N)
CREATE TABLE rooms (
                       id BIGSERIAL PRIMARY KEY,
                       room_number VARCHAR(50) NOT NULL UNIQUE,
                       room_type_id BIGINT NOT NULL,
                       status VARCHAR(50) NOT NULL,
                       CONSTRAINT fk_rooms_room_type FOREIGN KEY (room_type_id) REFERENCES room_types(id)
);

CREATE TABLE reservations (
                              id UUID PRIMARY KEY,
                              user_id UUID NOT NULL,
                              check_in_date DATE NOT NULL,
                              check_out_date DATE NOT NULL,
                              total_price DECIMAL(10, 2) NOT NULL,
                              status VARCHAR(50) NOT NULL,
                              CONSTRAINT fk_reservations_user FOREIGN KEY (user_id) REFERENCES users(id)
);

-- 3. Tabla Intermedia para la relación Muchos a Muchos (N:M)
CREATE TABLE reservation_rooms (
                                   reservation_id UUID NOT NULL,
                                   room_id BIGINT NOT NULL,
                                   PRIMARY KEY (reservation_id, room_id),
                                   CONSTRAINT fk_res_rooms_reservation FOREIGN KEY (reservation_id) REFERENCES reservations(id) ON DELETE CASCADE,
                                   CONSTRAINT fk_res_rooms_room FOREIGN KEY (room_id) REFERENCES rooms(id) ON DELETE CASCADE
);

-- 4. Tabla con Relación Uno a Uno (1:1)
CREATE TABLE payments (
                          id UUID PRIMARY KEY,
                          reservation_id UUID NOT NULL UNIQUE, -- El UNIQUE garantiza que sea 1:1
                          amount DECIMAL(10, 2) NOT NULL,
                          payment_method VARCHAR(50) NOT NULL,
                          status VARCHAR(50) NOT NULL,
                          payment_date TIMESTAMP,
                          CONSTRAINT fk_payments_reservation FOREIGN KEY (reservation_id) REFERENCES reservations(id)
);